--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -1,3 +1,10 @@
-<main>
+<main class="container">
   <h1>{{title}}</h1>
+
 </main>
+<main class="container">
+  <app-grid></app-grid>
+</main>  
+
+
+
