--- a/game/game-frontend/src/app/app.component.css
+++ b/game/game-frontend/src/app/app.component.css
@@ -6,3 +6,14 @@
 * {
   font-family: Bodo;
 }
+.container {
+  /* Center child horizontally*/
+  display: flex;
+  justify-content: center;
+}
+
+.child {
+  background-color: red;
+  /* Center horizontally*/
+  margin: 0 auto;
+}
