--- a/game/game-frontend/src/app/grid-matrix/grid-matrix.component.css
+++ b/game/game-frontend/src/app/grid-matrix/grid-matrix.component.css
@@ -14,3 +14,11 @@
     font-size: 30px;
     text-align: center;
   }
+
+  .lignedroite{
+    border-right: 5px solid rgba(0, 0, 0, 1);
+  }
+
+  .lignebas{
+    border-top: 5px solid rgba(0, 0, 0, 1);
+  }
