--- a/game/game-frontend/src/app/grid-matrix/grid-matrix.component.html
+++ b/game/game-frontend/src/app/grid-matrix/grid-matrix.component.html
@@ -1,10 +1,10 @@
 <div class="grid-container" >
-    <div [ngClass]="getClass(n) " (mouseenter)="hovered(n)"
-    (mouseleave)="unhovered(n)" *ngFor="let n of fakeArray"  [ngStyle]="{'background-color': (errorArray[n-1]) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}" >
+    <div class="grid-item" (mouseenter)="hovered(n)"
+    (mouseleave)="unhovered(n)" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': (errorArray[n-1]) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
       <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
   
-      <!-- {{getValueFromId(n)}} -->
-      {{n}}
+      {{getValueFromId(n)}}
+      <!-- {{n}} -->
     </div>
   </div>
   
