--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -1,9 +1,9 @@
 <div class="grid-container" >
     <div class="grid-item" (mouseenter)="hovered(n)"
-    (mouseleave)="unhovered(n)" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': (TileList[n-1].constraintRespected) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
+    (mouseleave)="unhovered(n)" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': (TileList[n].constraintRespected) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
       <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
   
-      {{TileList[n-1].value}}
+      {{TileList[n].value}}
       <!-- {{n}} -->
     </div>
   </div>
