FIX: various fixes to make it work again
-Major fix: gameComponent still not created so the lines related to its
call are now in comment
-Minor fix: camelCase for vars, "var" replaced by "const" or "let"

--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -1,10 +1,9 @@
 <div class="grid-container" >
     <div class="grid-item" (mouseenter)="hovered(n)"
-    (mouseleave)="unhovered(n)" *ngFor="let n of fakeArray" [ngClass]="getClass(n)" [ngStyle]="{'background-color': (!TileList[n].constraintRespected) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
+         (mouseleave)="unhovered(n)" *ngFor="let n of indexArray" [ngStyle]="{'background-color': (!tileList[n].constraintRespected) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
       <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
-  
-      {{TileList[n].value}}
+
+      {{tileList[n].value}}
       <!-- {{n}} -->
     </div>
   </div>
-  
