[Fix] SubGrid Disappeared, added suggested values in display, but function to determine them not working as expected

--- a/game/game-frontend/src/app/components/grid/grid.component.css
+++ b/game/game-frontend/src/app/components/grid/grid.component.css
@@ -21,3 +21,9 @@
   .lignebas{
     border-top: 5px solid rgba(0, 0, 0, 1);
   }
+
+  .suggested{
+    margin-top: 0px;
+    font-size: small;
+    color: grey;
+  }
