--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -1,8 +1,9 @@
 <div class="grid-container" >
-    <div class="grid-item" (mouseenter)="hovered(n)"
+    <div [ngClass]="getClass(n)" (mouseenter)="hovered(n)"
          (mouseleave)="unhovered(n)" *ngFor="let n of indexArray" [ngStyle]="{'background-color': (!tileList[n].constraintRespected) ? ((selectedTabName==n) ? 'grey' :'red' ) :((selectedTabName==n) ? 'grey' :'white' )}">
       <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
-
+        
+        <p class="suggested">{{tileList[n].suggestedValues}}</p>
       {{tileList[n].value}}
       <!-- {{n}} -->
     </div>
