Huge imporvements on dependency injection, now we use same gameservice for game and grid, perfect to pass data (I Guess)

--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -1,1 +1,11 @@
 <p>game works!</p>
+
+<div class="container" style="width:20%;height:100vh;">
+ <io-tree-history #treeComp style="height: 80%" [rootRenderer]="rootRenderer()">
+        </io-tree-history>
+
+</div>
+<div style="float:left;width:70%">
+<app-grid></app-grid> 
+
+</div>
