added a bit of classement sorry

--- a/game/game-frontend/src/app/components/classement/classement.component.html
+++ b/game/game-frontend/src/app/components/classement/classement.component.html
@@ -1,1 +1,3 @@
-<p>classement works!</p>
+<div class="classementRow" *ngFor="let player of classement">
+{{player.getName()}} : {{player.getScore()}}
+</div>
