added menu component, still have to do http fullfill

--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -1,8 +1,13 @@
-<main class="container">
+
   <h1>{{title}}</h1>
 
-</main>
+
+
+<app-menu></app-menu>
+
+<!-- 
+
 
   <app-game></app-game>
 
-  <app-classement></app-classement>
+  <app-classement></app-classement> -->
