--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -1,13 +1,6 @@
 
-  <h1>{{title}}</h1>
-
-
-
-<app-menu></app-menu>
-
-<!-- 
-
-
+  <h1 style="text-align: center">{{title}}</h1>
   <app-game></app-game>
+<!--  <app-menu></app-menu>-->
+<!--  <app-classement></app-classement>-->
 
-  <app-classement></app-classement> -->
