--- a/game/game-frontend/src/app/components/grid/grid.component.css
+++ b/game/game-frontend/src/app/components/grid/grid.component.css
@@ -4,7 +4,7 @@
     background-color: black;
     padding: 10px;
   }
-  
+
   .grid-item {
     background-color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(0, 0, 0, 0.8);
@@ -23,7 +23,10 @@
   }
 
   .suggested{
+    position: relative; top: 0;
     margin-top: 0px;
     font-size:medium;
     color: grey;
   }
+
+  
