--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -4,14 +4,22 @@
 </head>
 
 <div class="grid-container" >
-   
-    <div [ngClass]="getClass(n)" (mouseenter)="hovered(n)"
-         (mouseleave)="unhovered(n)" *ngFor="let n of indexArray" [ngStyle]="{'background-color': (!contraintRespected(n)) ? ((getSelected(n)==n) ? 'grey' :'red' ) :((getSelected(n)==n) ? 'grey' :'white' )}">
-      <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
-        
-        <p class="suggested">{{getSuggestedValues(n)}}</p>
-      {{getValue(n)}}
-      <!-- {{n}} -->
+
+  <div [ngClass]="getClass(n)" (mouseenter)="hovered(n)"
+       (mouseleave)="unhovered(n)" *ngFor="let n of indexArray" [ngStyle]="{'background-color': (!contraintRespected(n)) ? ((getSelected(n)==n) ? 'grey' :'red' ) :((getSelected(n)==n) ? 'grey' :'white' )}">
+    <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
+
+    <div>
+      <div class="suggested">{{getSuggestedValues(n)}}</div>
+      <div class="suggested" *ngIf="!getSuggestedValues(n).length"> - </div>
+    {{getValue(n)}}
     </div>
-  
+
+
+    <mat-select>
+      <mat-option *ngFor="let number of [1,2,3,4,5,6,7,8,9]" (onSelectionChange)="gameService.setValue(n, number)">{{number}}</mat-option>
+    </mat-select>
+    <!-- {{n}} -->
   </div>
+
+</div>
