--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-
+<h1>{{this.test}}</h1>
 <div class="container"  style="background-color: green; width:60%;margin: auto;align-items: center; text-align: center;">
 <label style="display:block">Entre ton nom de tocard, tocard</label> 
 <input  #playerName (keyup.enter)="setPlayer(playerName.value)" (blur)="setPlayer(playerName.value);  " type=text>
@@ -7,7 +7,7 @@
 
 
 <ul style="        list-style-type: none; align-items:center; text-align:center;"  class="BoardList">
-<a href=""><p style='display:inline-block'width="60%">Generate Random board</p></a>
+<a (click)="generateGrid()"><p style='display:inline-block'width="60%">Generate Random board</p></a>
 <mat-form-field style="padding-left: 20px;">
     <mat-select style="display: inline-block;padding-left:60px ; width: 20%;"placeholder="Difficuté">
       <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
