Back branché en local, reste tous le service et la factory à gérer

--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -3,11 +3,11 @@
 
 
 
-<app-menu></app-menu>
+<!-- <app-menu></app-menu>
 
-<!-- 
+ -->
 
 
   <app-game></app-game>
 
-  <app-classement></app-classement> -->
+  <app-classement></app-classement>
