--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -1,15 +1,15 @@
 
   <h1>{{title}}</h1>
 
-
+  <app-game></app-game>
 
 <app-menu></app-menu>
 
 <!-- 
 
 
-  <app-game></app-game>
-<!--  <app-menu></app-menu>-->
+
+  <app-menu></app-menu>-->
 <!--  <app-classement></app-classement>-->
 
   <app-classement></app-classement> -->
