--- a/game/game-frontend/src/app/components/classement/classement.component.css
+++ b/game/game-frontend/src/app/components/classement/classement.component.css
@@ -1,6 +1,8 @@
-.classementRow{
-    background-color: grey;
-    width : 100%;
-    height :60px;
-    color: black;
+table {
+  width: 100%;
+}
+
+.full-width {
+  font-size: 14px;
+  width: 100%;
 }
