--- a/game/game-frontend/src/app/components/classement/classement.component.html
+++ b/game/game-frontend/src/app/components/classement/classement.component.html
@@ -1,3 +1,15 @@
-<div class="classementRow" *ngFor="let player of classement">
-{{player.getName()}} : {{player.getScore()}}
-</div>
+<table mat-table [dataSource]="dataSource">
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> name </th>
+    <td mat-cell *matCellDef="let player"> {{player.name}} </td>
+  </ng-container>
+  <ng-container matColumnDef="score">
+    <th mat-header-cell *matHeaderCellDef> score </th>
+    <td mat-cell *matCellDef="let player"> {{player.score}} </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let playerRow; columns: displayedColumns"></tr>
+</table>
