--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -3,20 +3,11 @@
 
 </head>
 
-<button [ioButton]="binderClickEndGame">End game</button>
-<mat-form-field class="selector">
-  <mat-select [ioMatSelect] (matSelectBinder)="setValue($event,5)" [ioClick] (clickBinder)="directSet($event)"
-    [value]="gameService.currentGame.grid.getTile(5).getValue()" style="height:50px;width:50px;font-weight:black;">
-    <mat-option *ngFor="let number of [1,2,3,4,5,6,7,8,9]">{{number}}</mat-option>
-
-
-  </mat-select>
-</mat-form-field>
-
+<!-- 
 <div class="container" style="width:40%;height:100vh; justify-content: left">
   <io-tree-history #treeComp style="height: 80%" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
   </io-tree-history>
-</div>
+</div> -->
 
 <div class="grid-container">
 
