--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -4,6 +4,7 @@
     <io-tree-history #treeComp style="height: 80%" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
   </div>
+  <button (click)="settValue('fafa',5)"> dsfd</button>
   <div style="width:40%; justify-content: right; border-left: 50px" >
     <app-grid ></app-grid>
 
