--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -2,7 +2,9 @@
 
 
 </head>
-
+<mat-select [ioClick]="directSet" >
+  <mat-option *ngFor="let number of [1,2,3,4,5,6,7,8,9]" >{{number}}</mat-option>
+</mat-select>
 <button [ioButton]="binderClickEndGame">End game</button>
 
 <div class="grid-container" >
