--- a/game/game-frontend/src/app/components/game/game.component.css
+++ b/game/game-frontend/src/app/components/game/game.component.css
@@ -22,3 +22,17 @@
   text-align: center;
 }
 
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  }
+
+  .history-container {
+  position:relative;
+  flex: 0 0 35%;
+  }
+  .board-container {
+  flex: 0 0 65%;
+  padding-left: 10px;
+  }
