--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -1,14 +1,27 @@
 <div class="box" style="margin-left: 15%;margin-right: 15%;">
 
+
+  <div class="container">
+    <div class="history-container">
+    <io-tree-history style="height: 80%" [style.width]="'35%'" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
+    </io-tree-history>
+    </div>
+    <div class="board-container">
+      <app-grid ></app-grid>
+    </div>
+    </div>
+<!-- 
+
+
   <div class="container" style="width:40%;height:100vh; justify-content: left">
     <io-tree-history #treeComp style="height: 1000px;" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
   </div>
   <div style="width:40%; justify-content: right; border-left: 50px" >
-    <app-grid ></app-grid>
+    <app-grid ></app-grid> -->
 
 
-  </div>
+  <!-- </div> -->
 
 </div>
 
