ENH: diverses ameliorations front

--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -1,15 +1,29 @@
+<header>
+  <mat-toolbar>
+    <div class="test-spacer">
+      <p>Sudoku</p>
+    </div>
+    <div class="test-spacer">
+      <a routerLink="/menu">Menu</a>
+    </div>
+    <div class="test-spacer">
+      <a routerLink="/game">Game Page</a>
+    </div>
 
-  <h1>{{title}}</h1>
+  </mat-toolbar>
+</header>
 
-  <app-game></app-game>
 
-<app-menu></app-menu>
+  <router-outlet></router-outlet>
+<!--  <app-game></app-game>-->
 
-<!-- 
+<!--<app-menu></app-menu>-->
+
+<!--
 
 
 
   <app-menu></app-menu>-->
 <!--  <app-classement></app-classement>-->
 
-  <app-classement></app-classement> -->
+  -->
