--- a/game/game-frontend/src/app/app.component.css
+++ b/game/game-frontend/src/app/app.component.css
@@ -17,3 +17,24 @@
   /* Center horizontally*/
   margin: 0 auto;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.test-spacer{
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+a:hover, a:active{
+  color: gray;
+}
+.nav-caption{
+  display: inline-block;
+  padding-left: 6px;
+}
