--- a/game/game-frontend/src/app/components/grid/grid.component.css
+++ b/game/game-frontend/src/app/components/grid/grid.component.css
@@ -1,32 +1,34 @@
 .grid-container {
-    display: inline-grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto;
-    background-color: black;
-    padding: 10px;
-  }
+  display: inline-grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto;
+  background-color: black;
+  padding: 10px;
+}
 
-  .grid-item {
-    background-color: rgba(255, 255, 255, 1);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 5px;
-    width : 80px;
-    height:80px;
-    font-size: 30px;
-    text-align: center;
-  }
-  .lignedroite{
-    border-right: 5px solid rgba(0, 0, 0, 1);
-  }
+.grid-item {
+  background-color: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 5px;
+  width: 80px;
+  height: 80px;
+  font-size: 30px;
+  text-align: center;
+}
+  
+.lignedroite {
+  border-right: 5px solid rgba(0, 0, 0, 1);
+}
 
-  .lignebas{
-    border-top: 5px solid rgba(0, 0, 0, 1);
-  }
+.lignebas {
+  border-top: 5px solid rgba(0, 0, 0, 1);
+}
 
-  .suggested{
-    position: relative; top: 0;
-    margin-top: 0px;
-    font-size:medium;
-    color: grey;
-  }
+.suggested {
+  position: relative;
+  top: 0;
+  margin-top: 0px;
+  font-size: medium;
+  color: grey;
+}
 
 
