Added some DTO and checked incoming data for menu -> Now it displayls different grids. Still not passing the pipeline cos' i have a fucking stream to close

--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -23,7 +23,7 @@
                 <div class="grid-item"  *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
                   <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
 
-                  {{grid.tileList[n]}}
+                  {{grid.values[n].value}}
                   <!-- {{n}} -->
                 </div>
               </div>
