Create New Branch front-menu

--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
                 <div class="grid-item"  *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
                   <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
 
-                  {{grid.getTile(n).getValue()}}
+<!--                  {{grid.getTile(n).getValue()}}-->
                   <!-- {{n}} -->
                 </div>
               </div>
