--- a/game/game-frontend/src/app/components/menu/menu.component.css
+++ b/game/game-frontend/src/app/components/menu/menu.component.css
@@ -5,9 +5,9 @@
     padding: 1px;
     width: 100%;
     height:100%;
-    
+
   }
-  
+
   .grid-item {
     background-color: rgba(255, 255, 255, 1);
     border: 1px solid rgba(0, 0, 0, 0.8);
@@ -17,3 +17,11 @@
     font-size: 30px;
     text-align: center;
   }
+
+.menu-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
