--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,36 +1,40 @@
-<div class="container"  style="background-color: green; width:60%;margin: auto;align-items: center; text-align: center;">
-<label style="display:block">Entre ton nom de tocard, tocard</label>
-<input  #playerName (keyup.enter)="setPlayer(playerName.value)" (blur)="setPlayer(playerName.value);  " type=text>
-<p>Ton nom actuel : {{joueur.getName()}}</p>
-<mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
+<div style="width:60%; height:100%;margin: auto;align-items: center; text-align: center;">
+  <form class="menu-form">
+    <mat-form-field style="width: 100%;">
+      <mat-label>Entre ton nom de tocard, tocard</mat-label>
+      <input matInput #playerName (change)="setPlayer(playerName.value)" autocomplete="off" placeholder="Topin">
+    </mat-form-field>
 
+  </form>
+  <p>Ton nom actuel : {{joueur.getName()}}</p>
+  <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
 
-<ul style="        list-style-type: none; align-items:center; text-align:center;"  class="BoardList">
-<a (click)="generateGrid()"><p style='display:inline-block'width="60%">Generate Random board</p></a>
-<mat-form-field style="padding-left: 20px;">
-    <mat-select style="display: inline-block;padding-left:60px ; width: 20%;"placeholder="Difficulté">
-      <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
-        {{ difficult}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <a href="">
-    <li *ngFor="let grid of Allgrids">
+<div style="box-sizing: border-box;border: 5px solid black; width: 40%; margin-left: auto;margin-right: auto">
+  <ul style="list-style-type: none; align-items:center; text-align:center;" class="BoardList">
+    <a (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></a>
+    <mat-form-field style="padding-left: 5%;">
+      <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
+        <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
+          {{ difficult}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <a href="">
+      <li *ngFor="let grid of Allgrids">
         <div style="width:500px;height: 500px;">
 
-            <div class="grid-container" >
-                <div class="grid-item"  *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
-                  <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
-
-<!--                  {{grid.getTile(n).getValue()}}-->
-                  <!-- {{n}} -->
-                </div>
-              </div>
+          <div class="grid-container">
+            <div class="grid-item" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
+              <!--                  {{grid.getTile(n).getValue()}}-->
+            </div>
+          </div>
 
         </div>
         <p>{{grid.difficulte.toLocaleString()}}</p>
-    </li>
-</a>
-</ul>
+      </li>
+    </a>
+  </ul>
+</div>
+
   <a routerLink="/game">Go to Game (temporary)</a>
 </div>
