--- a/game/game-frontend/src/app/components/menu/menu.component.css
+++ b/game/game-frontend/src/app/components/menu/menu.component.css
@@ -18,10 +18,26 @@
     text-align: center;
   }
 
-.menu-form {
+.input-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.grid-div{
+  box-sizing: border-box;
+  border: 5px solid black;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.menu-div{
+  width:60%;
+  height:100%;
+  margin: auto;
+  align-items: center;
+  text-align: center;
 }
