--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
-<div style="width:60%; height:100%;margin: auto;align-items: center; text-align: center;">
-  <form class="menu-form">
+<div class="menu-div">
+  <form class="input-form">
     <mat-form-field style="width: 100%;">
       <mat-label>Entre ton nom de tocard, tocard</mat-label>
       <input matInput #playerName (change)="setPlayer(playerName.value)" autocomplete="off" placeholder="Topin">
@@ -9,8 +9,9 @@
   <p>Ton nom actuel : {{joueur.getName()}}</p>
   <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
 
-<div style="box-sizing: border-box;border: 5px solid black; width: 40%; margin-left: auto;margin-right: auto">
-  <ul style="list-style-type: none; align-items:center; text-align:center;" class="BoardList">
+<div class="grid-div">
+  <ul style="list-style-type: none; align-items:center; text-align:center;">
+
     <a (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></a>
     <mat-form-field style="padding-left: 5%;">
       <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
@@ -19,6 +20,8 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+
+
     <a href="">
       <li *ngFor="let grid of Allgrids">
         <div style="width:500px;height: 500px;">
