--- a/game/game-frontend/src/app/components/menu/menu.component.css
+++ b/game/game-frontend/src/app/components/menu/menu.component.css
@@ -41,3 +41,9 @@
   align-items: center;
   text-align: center;
 }
+
+.grid-list{
+  list-style-type: none;
+  align-items:center;
+  text-align:center;
+}
