--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -10,18 +10,15 @@
   <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
 
 <div class="grid-div">
-  <ul style="list-style-type: none; align-items:center; text-align:center;">
-
-    <a (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></a>
-    <mat-form-field style="padding-left: 5%;">
-      <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
-        <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
-          {{ difficult}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-
-
+  <a (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></a>
+  <mat-form-field style="padding-left: 5%;">
+    <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
+      <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
+        {{ difficult}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <ul class="grid-list">
     <a href="">
       <li *ngFor="let grid of Allgrids">
         <div style="width:500px;height: 500px;">
