--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,36 +1,39 @@
-<div class="container"  style="background-color: green; width:60%;margin: auto;align-items: center; text-align: center;">
-<label style="display:block">Entre ton nom de tocard, tocard</label>
-<input  #playerName (keyup.enter)="setPlayer(playerName.value)" (blur)="setPlayer(playerName.value);  " type=text>
-<p>Ton nom actuel : {{joueur.getName()}}</p>
-<mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
+<div class="container" style="background-color: green; width:60%;margin: auto;align-items: center; text-align: center;">
+  <label style="display:block">Entre ton nom de tocard, tocard</label>
+  <input #playerName (keyup.enter)="setPlayer(playerName.value)" (blur)="setPlayer(playerName.value);  " type=text>
+  <p>Ton nom actuel : {{joueur.getName()}}</p>
+  <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
 
 
-<ul style="        list-style-type: none; align-items:center; text-align:center;"  class="BoardList">
-<a (click)="generateGrid()"><p style='display:inline-block'width="60%">Generate Random board</p></a>
-<mat-form-field style="padding-left: 20px;">
-    <mat-select style="display: inline-block;padding-left:60px ; width: 20%;"placeholder="Difficulté">
-      <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
-        {{ difficult}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <a href="">
-    <li *ngFor="let griddto of Allgrids">
-        <div style="width:500px;height: 500px;">
+  <ul style="        list-style-type: none; align-items:center; text-align:center;" class="BoardList">
+    <a (click)="generateGrid()">
+      <p style='display:inline-block' width="60%">Generate Random board</p>
+    </a>
+    <mat-form-field style="padding-left: 20px;">
+      <mat-select style="display: inline-block;padding-left:60px ; width: 20%;" placeholder="Difficulté">
+        <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
+          {{ difficult}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+      <li *ngFor="let griddto of Allgrids">
+        
 
-            <div class="grid-container" >
-                <div class="grid-item"  *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
-                  <!-- <div class="grid-item" *ngFor="let n of fakeArray" > -->
 
-                  {{griddto.values[n].value}}
-                  <!-- {{n}} -->
-                </div>
+        <a [routerLink]="['/game',griddto.id]" (click)="launchGame(griddto.id)">
+          <div style="width:500px;height: 500px;">
+            <div class="grid-container">
+              <div class="grid-item" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
+
+                {{griddto.values[n].value}}
+
               </div>
-
-        </div>
+            </div>
+            
+          </div>
+        </a>
         <p>{{griddto.difficulte.toLocaleString()}}</p>
-    </li>
-</a>
-</ul>
+      </li>
+  </ul>
   <a routerLink="/game">Go to Game (temporary)</a>
 </div>
