--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -4,7 +4,7 @@
     <io-tree-history #treeComp style="height: 1000px;" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
   </div>
-  <div style="width:40%; justify-content: right; border-left: 50px" >
+  <div style="width:40%; justify-content: center; border-left: 50px; padding-right: 350px" >
     <app-grid ></app-grid>
   </div>
   <button mat-button (click)="openDialog()">
