--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -1,9 +1,9 @@
 <div class="box" style="margin-left: 0%;margin-right: 0%;">
 
-  <div class="container" style="width:40%;height:100%; justify-content: left">
-    <io-tree-history #treeComp style="height: 1000px;" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
+  <div class="history-container">
+    <io-tree-history style="height: 80%" [style.width]="'35%'" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
-  </div>
+    </div>
   <div style="width:40%; justify-content: center; border-left: 50px; padding-right: 350px" >
     <app-grid ></app-grid>
   </div>
