super on récupere bien le classement

--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -11,6 +11,8 @@
     <img src="assets/podium.png" style="width:80px;height:80px;">
   </button>
 
+  <button mat-button (click)="endGame()" style="background-color: red;">
+  </button>
 </div>
 
 
