fixed suggested value real time

--- a/game/game-frontend/src/app/components/classement/classement.component.html
+++ b/game/game-frontend/src/app/components/classement/classement.component.html
@@ -8,7 +8,7 @@
     </ng-container>
     <ng-container matColumnDef="score">
       <th mat-header-cell *matHeaderCellDef> score </th>
-      <td mat-cell *matCellDef="let player"> {{player.score}} </td>
+      <td mat-cell *matCellDef="let player" align="end">  {{player.score}} </td>
     </ng-container>
 
 
