--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -11,7 +11,7 @@
   <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
 
 <div class="grid-div">
-  <a (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></a>
+  <button mat-button (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></button>
   <mat-form-field style="padding-left: 5%;">
     <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
       <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
@@ -27,7 +27,6 @@
             <div class="grid-container">
               <div class="grid-item" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
                 <div *ngIf="griddto.values[n].value"> {{griddto.values[n].value}} </div>
-                
 
               </div>
             </div>
