--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -8,7 +8,7 @@
 
   </form>
   <p>Ton nom actuel : {{joueur.getName()}}</p>
-  <mat-checkbox>Clique ici si t es un flemmard</mat-checkbox>
+  <mat-checkbox [(ngModel)]="IsChecked" >Clique ici si t es un flemmard</mat-checkbox>
 
 <div class="grid-div">
   <button mat-button (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></button>
