--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -13,7 +13,7 @@
 <div class="grid-div">
   <button mat-button (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></button>
   <mat-form-field style="padding-left: 5%;">
-    <mat-select style="display: inline-block;text-align: center" placeholder="Difficulté">
+    <mat-select [(value)]="choosedDifficulte" style="display: inline-block;text-align: center" placeholder="Difficulté">
       <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
         {{ difficult}}
       </mat-option>
