ENH: HTML & CSS improvements
-menu modifié, probablement la version finale au niveau du HTML CSS
-legeres modifications pour le game components pour retrouver une page à
peu près bien formée :)
-lien direct du header vers la game enlevé car maintenant inutile

--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -4,10 +4,7 @@
       <p>Sudoku</p>
     </div>
     <div class="test-spacer">
-      <a routerLink="/menu">Menu</a>
-    </div>
-    <div class="test-spacer">
-      <a routerLink="/game">Game Page</a>
+      <a routerLink="/menu">Go Back To Menu</a>
     </div>
 
   </mat-toolbar>
