--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -1,19 +1,27 @@
 <div class="box" style="margin-left: 0%;margin-right: 0%;">
-  <p>{{this.gameService.currentGame.player.getName()}}</p>
+
   <div class="history-container">
     <io-tree-history style="height: 80%" [style.width]="'35%'" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
     </div>
-  <div style="width:40%; justify-content: center; border-left: 50px; padding-right: 350px" >
+  <div style="width:40%; justify-content: center; border-left: 50px; padding-right: 200px" >
     <app-grid ></app-grid>
   </div>
-  <button mat-button (click)="openDialog()">
+  <div>
+    <button mat-button (click)="openDialog()">
     <img src="assets/podium.png" style="width:80px;height:80px;">
-  </button>
+    </button>
 
-  <p>score</p>
-  <p [(ngModel)]='this.gameService.player.score'></p>
+    <div>
+      <p [(ngModel)]='this.gameService.player.score'>score : </p>
       {{this.scoreintra}}
+    </div>
+
+
+    <p>{{this.gameService.currentGame.player.getName()}}</p>
+  </div>
+
+
 
 
 </div>
