--- a/game/game-frontend/src/app/components/grid/grid.component.html
+++ b/game/game-frontend/src/app/components/grid/grid.component.html
@@ -15,10 +15,10 @@
 
     <div>
       <mat-select  [ioMatSelect] (matSelectBinder)="setValue($event, n)" [ioClick] (clickBinder)="directSet($event,n)"
-        [value]="gameService.currentGame.grid.getTile(n).getValue()" style="height:50px;width:50px;font-weight:black;">
+        [value]="gameService.currentGame.grid.getTile(n).getValue()" style="height:50px;width:50px;">
         <mat-option *ngFor="let number of [1,2,3,4,5,6,7,8,9]" [value]="number">{{number}}</mat-option>
       </mat-select>
-     
+
       <div class="suggested" *ngIf="this.gameService.help">{{getSuggestedValues(n)}}</div>
       <div class="suggested" *ngIf="!getSuggestedValues(n).length"> - </div>
     </div>
