--- a/game/game-frontend/src/app/components/menu/menu.component.css
+++ b/game/game-frontend/src/app/components/menu/menu.component.css
@@ -29,7 +29,7 @@
 .grid-div{
   box-sizing: border-box;
   border: 5px solid black;
-  width: 40%;
+  width: 55%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -46,4 +46,11 @@
   list-style-type: none;
   align-items:center;
   text-align:center;
+  max-height: 600px;
+  overflow: auto;
+}
+
+a {
+  text-decoration: none;
+  color: black; /*par exemple*/
 }
