--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,4 +1,3 @@
-
 <div class="menu-div">
   <form class="input-form">
     <mat-form-field style="width: 100%;">
@@ -8,36 +7,36 @@
 
   </form>
   <p>Ton nom actuel : {{joueur.getName()}}</p>
-  <mat-checkbox [(ngModel)]="IsChecked" >Clique ici si t es un flemmard</mat-checkbox>
+  <mat-checkbox [(ngModel)]="IsChecked">Clique ici si t es un flemmard</mat-checkbox>
 
-<div class="grid-div">
-  <button mat-button (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p></button>
-  <mat-form-field style="padding-left: 5%;">
-    <mat-select [(value)]="choosedDifficulte" style="display: inline-block;text-align: center" placeholder="Difficulté">
-      <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
-        {{ difficult}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <ul class="grid-list">
-    <a href="">
-      <li *ngFor="let griddto of Allgrids">
-        <a [routerLink]="['/game',griddto.id]" (click)="launchGame(griddto.id)">
-          <div style="width:500px;height: 500px;">
-            <div class="grid-container">
-              <div class="grid-item" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
-                <div *ngIf="griddto.values[n].value"> {{griddto.values[n].value}} </div>
+  <div class="grid-div">
+    <button mat-button (click)="generateGrid()"><p style='display:inline-block' width="60%">Generate Random board</p>
+    </button>
+    <mat-form-field style="padding-left: 5%;">
+      <mat-select [(value)]="choosedDifficulte" style="display: inline-block;text-align: center"
+                  placeholder="Difficulté">
+        <mat-option *ngFor="let difficult of difficultes" [value]="difficult">
+          {{ difficult}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <ul class="grid-list">
+        <li *ngFor="let griddto of Allgrids">
+          <a [routerLink]="['/game',griddto.id]" (click)="launchGame(griddto.id)">
+            <div style="width:500px;height: 500px;">
+              <div class="grid-container">
+                <div class="grid-item" *ngFor="let n of fakeArray" [ngStyle]="{'background-color': 'white'}">
+                  <div *ngIf="griddto.values[n].value"> {{griddto.values[n].value}} </div>
 
+                </div>
               </div>
-            </div>
-            
-          </div>
-        </a>
-        <p>{{griddto.difficulte.toLocaleString()}}</p>
-      </li>
-    </a>
-  </ul>
-</div>
 
-  <a routerLink="/game">Go to Game (temporary)</a>
+            </div>
+            <p>{{griddto.difficulte.toLocaleString()}}</p>
+          </a>
+
+        </li>
+    </ul>
+  </div>
+
 </div>
