NEW: dialog when trying to go back to menu
-ajout d'une fenetre de dialog pour prévenir l'utilisateur de la perte
des données de la game si il tente de la quitter

--- a/game/game-frontend/src/app/app.component.html
+++ b/game/game-frontend/src/app/app.component.html
@@ -4,7 +4,8 @@
       <p>Sudoku</p>
     </div>
     <div class="test-spacer">
-      <a routerLink="/menu">Go Back To Menu</a>
+      <button style="border: none;background-color: Transparent;background-repeat:no-repeat;overflow:hidden;outline: none;" mat-raised-button (click)="openDialog()">Go Back To Menu</button>
+<!--      <a routerLink="/menu">Go Back To Menu</a>-->
     </div>
 
   </mat-toolbar>
