ENH: Grid improvement
-case de base de la grille pas modifiable
-couleur des chiffres rajoutés modifiée
-image classement changé

--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -1,6 +1,6 @@
 <div class="box" style="margin-left: 0%;margin-right: 0%;">
 
-  <div class="history-container">
+  <div style="margin-right: 20px" class="history-container">
     <io-tree-history style="height: 80%" [style.width]="'35%'" [svgIconSize]="200" [rootRenderer]="rootRenderer()">
     </io-tree-history>
     </div>
@@ -9,7 +9,7 @@
   </div>
   <div>
     <button mat-button (click)="openDialog()">
-    <img src="assets/podium.png" style="width:80px;height:80px;">
+    <img src="assets/ranking.svg" style="width:80px;height:80px;">
     </button>
 
     <div>
