Sorry, juste shitted a bit in the glue

--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -32,7 +32,7 @@
               </div>
 
             </div>
-            <p>{{griddto.difficulte.toLocaleString()}}</p>
+            <p>{{griddto.difficulte.toLocaleString()}} - ID : {{griddto.id}}</p>
           </a>
 
         </li>
