Removed a swear word in the front

--- a/game/game-frontend/src/app/components/menu/menu.component.html
+++ b/game/game-frontend/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="menu-div">
   <form class="input-form">
     <mat-form-field style="width: 100%;">
-      <mat-label>Entre ton nom de tocard, tocard</mat-label>
+      <mat-label>Entre ton nom ici !</mat-label>
       <input matInput #playerName (change)="setPlayer(playerName.value)" autocomplete="off" placeholder="Topin">
     </mat-form-field>
 
