Ha oui c est vrai c est le score le plus faire qui est le mieux j suis un golmut

--- a/game/game-frontend/src/app/components/game/game.component.html
+++ b/game/game-frontend/src/app/components/game/game.component.html
@@ -13,7 +13,7 @@
     </button>
 
     <div>
-      <p [(ngModel)]='this.gameService.player.score'>score : </p>
+      <p [(ngModel)]='this.gameService.player.score' name="scoreintra" ngDefaultControl >score : </p>
       {{this.scoreintra}}
     </div>
 
@@ -26,6 +26,7 @@
     </form>
     <p>Ton nom actuel : {{this.gameService.currentGame.player.getName()}}</p>
   </div>
+  <button (click)="this.gameService.endGame()"></button>
 
 
 
